feat: add support for excluding jobs
Adds an EXCLUDE_JOBS input option that takes a regex as a string.

Note special chars may need to be double-escaped to function correctly.

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: Env name
     required: false
     default: WORKFLOW_CONCLUSION
+  EXCLUDE_JOBS:
+    description: Regular expression matching Job names that are allowed to fail
+    required: false
+    default: null
   FALLBACK_CONCLUSION:
     description: Fallback conclusion
     required: false
